--- a/integrations/messenger/package.json
+++ b/integrations/messenger/package.json
@@ -17,6 +17,7 @@
     "@botpress/sdk": "workspace:*",
     "@botpress/sdk-addons": "workspace:*",
     "@slack/web-api": "^6.8.0",
+    "axios": "^1.6.2",
     "messaging-api-messenger": "^1.1.0",
     "query-string": "^6.14.1"
   },
