--- a/integrations/messenger/package.json
+++ b/integrations/messenger/package.json
@@ -17,12 +17,17 @@
     "@botpress/sdk": "workspace:*",
     "@botpress/sdk-addons": "workspace:*",
     "@slack/web-api": "^6.8.0",
+    "@types/react": "^18.3.3",
     "axios": "^1.6.2",
     "messaging-api-messenger": "^1.1.0",
-    "query-string": "^6.14.1"
+    "mustache": "^4.2.0",
+    "query-string": "^6.14.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@sentry/cli": "^2.18.1",
+    "@types/mustache": "4.2.5",
     "@types/node": "^18.11.17",
     "esbuild": "^0.15.18",
     "nodemon": "^2.0.20",
