--- a/integrations/messenger/package.json
+++ b/integrations/messenger/package.json
@@ -23,7 +23,9 @@
     "mustache": "^4.2.0",
     "query-string": "^6.14.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "preact": "^10.23.1",
+    "preact-render-to-string": "^6.5.7"
   },
   "devDependencies": {
     "@sentry/cli": "^2.18.1",
