--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@botpress/client",
-  "version": "0.28.0",
+  "version": "0.29.0",
   "description": "Botpress Client",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "axios": "^1.6.1",
+    "axios-retry": "^4.5.0",
     "browser-or-node": "^2.1.1",
     "qs": "^6.11.0",
     "type-fest": "^3.4.0"
