update all dependencies

--- a/integrations/trello/package.json
+++ b/integrations/trello/package.json
@@ -6,23 +6,21 @@
   },
   "private": true,
   "dependencies": {
-    "@botpress/client": "~0.29.2",
-    "@botpress/sdk": "~0.10.13",
+    "@botpress/client": "workspace:*",
+    "@botpress/sdk": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-jsdoc": "^39.9.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.8.8",
-    "reflect-metadata": "^0.2.2",
-    "trello.js": "^1.2.7",
-    "tsyringe": "^4.8.0"
+    "trello.js": "^1.2.7"
   },
   "devDependencies": {
-    "@types/node": "^18.19.47",
+    "@types/node": "^18.19.48",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
   }
