enforce more eslint rules

--- a/integrations/trello/package.json
+++ b/integrations/trello/package.json
@@ -2,7 +2,11 @@
   "name": "trello",
   "integrationName": "trello",
   "scripts": {
-    "check:type": "tsc --noEmit"
+    "check:type": "tsc --noEmit",
+    "check:format": "prettier --check .",
+    "fix:format": "prettier --write .",
+    "check:lint": "eslint ./ --ext .ts --ext .tsx",
+    "fix:lint": "eslint --fix ./ --ext .ts --ext .tsx"
   },
   "private": true,
   "dependencies": {
