--- a/integrations/trello/package.json
+++ b/integrations/trello/package.json
@@ -21,9 +21,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.8.8",
-    "reflect-metadata": "^0.2.2",
-    "trello.js": "^1.2.7",
-    "tsyringe": "^4.8.0"
+    "trello.js": "^1.2.7"
   },
   "devDependencies": {
     "@types/node": "^18.19.48",
