run prettier on the trello integration

--- a/integrations/trello/tsconfig.json
+++ b/integrations/trello/tsconfig.json
@@ -8,11 +8,7 @@
     "noPropertyAccessFromIndexSignature": true,
     "noUncheckedIndexedAccess": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedParameters": true
   },
-  "include": [
-    ".botpress/**/*",
-    "src/**/*",
-    "integration.definition.ts"
-  ]
+  "include": [".botpress/**/*", "src/**/*", "integration.definition.ts"]
 }
