--- a/.github/actions/deploy-integrations/action.yml
+++ b/.github/actions/deploy-integrations/action.yml
@@ -55,6 +55,9 @@ input:
   groq_secrets:
     description: 'Groq secrets'
     required: false
+  todoist_secrets:
+    description: 'Todoist secrets'
+    required: false
 
 runs:
   using: 'composite'
@@ -96,7 +99,7 @@ runs:
         # deploy
 
         redeploy=${{ inputs.force == 'true' && 1 || 0 }}
-        all_filters="-F '{integrations/*}' -F '!asana' -F '!trello' -F '!webchat' -F '!todoist' ${{ inputs.extra_filter }}"
+        all_filters="-F '{integrations/*}' -F '!asana' -F '!trello' -F '!webchat' ${{ inputs.extra_filter }}"
         list_integrations_cmd="pnpm list $all_filters --json"
         integration_paths=$(eval $list_integrations_cmd | jq -r "map(".path") | .[]")
 
@@ -127,6 +130,8 @@ runs:
                 base_command="$base_command ${{ inputs.anthropic_secrets }}"
             elif [ $integration == "fireworks-ai" ]; then
                 base_command="$base_command ${{ inputs.fireworks_ai_secrets }}"
+            elif [ $integration == "todoist" ]; then
+                base_command="$base_command ${{ inputs.todoist_secrets }}"
             fi
             
             if [ $exists -eq 0 ]; then
