--- a/integrations/trello/package.json
+++ b/integrations/trello/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trello",
+  "name": "@botpresshub/trello",
   "integrationName": "trello",
   "scripts": {
     "build": "pnpm bp build",
