ensure that trello gets build

--- a/integrations/trello/package.json
+++ b/integrations/trello/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "trello",
+  "name": "@botpresshub/trello",
   "integrationName": "trello",
   "scripts": {
+    "build": "pnpm bp build",
+    "deploy": "pnpm bp deploy",
     "check:type": "tsc --noEmit",
     "check:format": "prettier --check .",
     "fix:format": "prettier --write .",
