move further refactor schemas

--- a/integrations/trello/tsconfig.json
+++ b/integrations/trello/tsconfig.json
@@ -10,5 +10,5 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true
   },
-  "include": [".botpress/**/*", "src/**/*", "integration.definition.ts"]
+  "include": [".botpress/**/*", "src/**/*", "integration.definition.ts", "definitions/**/*"]
 }
