--- a/integrations/slack/package.json
+++ b/integrations/slack/package.json
@@ -5,7 +5,11 @@
     "start": "pnpm bp serve",
     "build": "pnpm bp build",
     "deploy": "pnpm bp deploy",
-    "check:type": "tsc --noEmit"
+    "check:type": "tsc --noEmit",
+    "check:format": "prettier --check .",
+    "fix:format": "prettier --write .",
+    "check:lint": "eslint ./ --ext .ts --ext .tsx",
+    "fix:lint": "eslint --fix ./ --ext .ts --ext .tsx"
   },
   "keywords": [],
   "author": "",
