--- a/integrations/slack/package.json
+++ b/integrations/slack/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@botpress/sdk": "workspace:*",
     "@botpress/sdk-addons": "workspace:*",
-    "@slack/bolt": "^3.13.1",
+    "@slack/types": "^2.13.1",
     "@slack/web-api": "^6.8.0",
     "axios": "^1.3.4",
     "fuse.js": "^6.6.2",
