add Spectral as a dependency

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -26,6 +26,9 @@
     "@bpinternal/tunnel": "^0.1.1",
     "@bpinternal/yargs-extra": "^0.0.3",
     "@parcel/watcher": "^2.1.0",
+    "@stoplight/spectral-core": "^1.19.1",
+    "@stoplight/spectral-functions": "^1.9.0",
+    "@stoplight/spectral-parsers": "^1.0.4",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.17",
     "@types/verror": "^1.10.6",
