feat(messenger): add oauth (#13278)
Co-authored-by: Abraham Lopez <abraham.lopez@botpress.com>

--- a/.github/actions/deploy-integrations/action.yml
+++ b/.github/actions/deploy-integrations/action.yml
@@ -61,6 +61,9 @@ input:
   cerebras_secrets:
     description: 'Cerebras secrets'
     required: false
+  messenger_secrets:
+    description: 'Messenger secrets'
+    required: false
 
 runs:
   using: 'composite'
@@ -131,6 +134,8 @@ runs:
                 base_command="$base_command ${{ inputs.groq_secrets }}"
             elif [ $integration == "anthropic" ]; then
                 base_command="$base_command ${{ inputs.anthropic_secrets }}"
+            elif [ $integration == "messenger" ]; then
+                base_command="$base_command ${{ inputs.messenger_secrets }}"
             elif [ $integration == "fireworks-ai" ]; then
                 base_command="$base_command ${{ inputs.fireworks_ai_secrets }}"
             elif [ $integration == "todoist" ]; then
