--- a/integrations/messenger/package.json
+++ b/integrations/messenger/package.json
@@ -17,8 +17,11 @@
     "@botpress/sdk": "workspace:*",
     "@botpress/sdk-addons": "workspace:*",
     "@slack/web-api": "^6.8.0",
+    "axios": "^1.6.2",
     "messaging-api-messenger": "^1.1.0",
-    "query-string": "^6.14.1"
+    "query-string": "^6.14.1",
+    "preact": "^10.23.1",
+    "preact-render-to-string": "^6.5.7"
   },
   "devDependencies": {
     "@sentry/cli": "^2.18.1",
