--- a/integrations/airtable/package.json
+++ b/integrations/airtable/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@botpresshub/telegram",
-  "description": "Telegram integration for Botpress",
+  "name": "@botpresshub/airtable",
+  "description": "Airtable integration for Botpress",
   "private": true,
   "scripts": {
     "start": "pnpm bp serve",
@@ -13,20 +13,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@botpress/client": "workspace:*",
     "@botpress/sdk": "workspace:*",
-    "@botpress/sdk-addons": "workspace:*",
-    "@sentry/node": "7.53.1",
-    "lodash": "^4.17.21",
-    "telegraf": "^4.16.3"
+    "airtable": "^0.12.2",
+    "axios": "^1.5.0"
   },
   "devDependencies": {
-    "@botpress/cli": "workspace:*",
-    "@sentry/cli": "^2.18.1",
-    "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.17",
-    "esbuild": "^0.15.18",
-    "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
