--- a/bots/hello-world/package.json
+++ b/bots/hello-world/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "@botpress/cli": "workspace:*",
     "@botpress/client": "workspace:*",
-    "@botpress/sdk": "workspace:*"
+    "@botpress/sdk": "workspace:*",
+    "@botpresshub/whatsapp": "workspace:*"
   },
   "devDependencies": {
     "@types/json-schema": "^7.0.11",
