fix(zui): handle all literal types when transforming to typescript (#377)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,8 @@
     "isolatedModules": true
   },
   "exclude": ["node_modules", "dist", "*.test.ts", "**/benchmark/**/*.ts"],
-  "include": ["src/**/*", "vitest.d.ts"]
+  "include": ["src/**/*", "vitest.d.ts"],
+  "ts-node": {
+    "esm": true
+  }
 }
