--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
     "react-dom": "^18.2.0",
     "storybook": "^8.0.9",
     "ts-morph": "^22.0.0",
+    "ts-node": "^10.9.2",
     "tsup": "^8.0.1",
     "tsx": "^4.7.2",
     "typescript": "5.5.3",
     "vite": "^5.2.6",
     "vitest": "1.6.0"
   },
-  "dependencies": {},
   "peerDependencies": {
     "react": "^18.2.0"
   },
