--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -20,6 +20,7 @@
   },
   "main": "dist/index.js",
   "dependencies": {
+    "@apidevtools/json-schema-ref-parser": "^11.7.0",
     "@botpress/client": "0.31.0",
     "@botpress/sdk": "0.11.6",
     "@bpinternal/const": "^0.0.20",
