feat(zui): add a method to append metadata (#400)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true
   },
-  "exclude": ["node_modules", "dist", "*.test.ts", "**/benchmark/**/*.ts"],
+  "exclude": ["node_modules", "dist"],
   "include": ["src/**/*", "vitest.d.ts"],
   "ts-node": {
     "esm": true
