--- a/integrations/linear/tsconfig.json
+++ b/integrations/linear/tsconfig.json
@@ -4,5 +4,5 @@
     "baseUrl": ".",
     "outDir": "dist"
   },
-  "include": [".botpress/**/*", "src/**/*", "integration.definition.ts"]
+  "include": [".botpress/**/*", "src/**/*", "integration.definition.ts", "definitions"]
 }
