--- a/.github/workflows/bugbuster.yml
+++ b/.github/workflows/bugbuster.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Login to Botpress
         run: pnpm bp login -y --token ${{ secrets.PRODUCTION_TOKEN_CLOUD_OPS_ACCOUNT }} --workspace-id ${{ secrets.PRODUCTION_CLOUD_OPS_WORKSPACE_ID }}
       - name: Install Botpress Dependencies
-        run: pnpm bp add github -y && pnpm bp add slack
+        run: pnpm bp add github@0.3.3 -y && pnpm bp add slack@1.0.1
       - name: Type Check
         run: tsc --noEmit
       - name: Build
