feat(cli): allow installing an integration package

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -31,7 +31,7 @@
     "type-fest": "^3.4.0"
   },
   "devDependencies": {
-    "@botpress/api": "0.41.1",
+    "@botpress/api": "/Users/francoislevasseur/Documents/code/skynet/packages/public-api",
     "@types/qs": "^6.9.7",
     "esbuild": "^0.16.12",
     "lodash": "^4.17.21",
