--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -20,6 +20,7 @@
   },
   "main": "dist/index.js",
   "dependencies": {
+    "@apidevtools/json-schema-ref-parser": "^11.7.0",
     "@botpress/client": "0.30.2",
     "@botpress/sdk": "0.11.5",
     "@bpinternal/const": "^0.0.20",
@@ -39,9 +40,9 @@
     "json-schema-to-typescript": "^11.0.2",
     "latest-version": "5.1.0",
     "lodash": "^4.17.21",
+    "prettier": "2.8.8",
     "prompts": "^2.4.2",
     "radash": "^9.5.0",
-    "prettier": "2.8.8",
     "semver": "^7.3.8",
     "typescript": "^4.9.4",
     "uuid": "^9.0.0",
@@ -51,7 +52,7 @@
   "devDependencies": {
     "@bpinternal/log4bot": "^0.0.4",
     "@types/bluebird": "^3.5.38",
-    "@types/json-schema": "^7.0.11",
+    "@types/json-schema": "^7.0.12",
     "@types/prompts": "^2.0.14",
     "@types/semver": "^7.3.11",
     "@types/tmp": "^0.2.3",
