--- a/.github/actions/deploy-integrations/action.yml
+++ b/.github/actions/deploy-integrations/action.yml
@@ -64,6 +64,9 @@ input:
   messenger_secrets:
     description: 'Messenger secrets'
     required: false
+  github_secrets:
+    description: 'Github secrets'
+    required: false
 
 runs:
   using: 'composite'
@@ -142,8 +145,10 @@ runs:
                 base_command="$base_command ${{ inputs.todoist_secrets }}"
             elif [ $integration == "cerebras" ]; then
                 base_command="$base_command ${{ inputs.cerebras_secrets }}"
+            elif [ $integration == "github" ]; then
+                base_command="$base_command ${{ inputs.github_secrets }}"
             fi
-            
+
             if [ $exists -eq 0 ]; then
                 echo -e "\nDeploying integration: ### $integration ###\n"
                 pnpm retry -n 2 -- pnpm -F $integration -c exec -- "$base_command"
