--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@botpress/client": "0.30.2",
-    "@bpinternal/zui": "/Users/francoislevasseur/Documents/code/packages/zui",
+    "@bpinternal/zui": "0.12.0",
     "handlebars": "^4.7.8"
   },
   "devDependencies": {
