--- a/integrations/gmail/package.json
+++ b/integrations/gmail/package.json
@@ -6,7 +6,8 @@
     "start": "pnpm bp serve",
     "build": "pnpm bp build",
     "deploy": "pnpm bp deploy",
-    "check:type": "tsc --noEmit"
+    "check:type": "tsc --noEmit",
+    "add:interfaces": "echo 'no interfaces to add'"
   },
   "keywords": [],
   "author": "",
