--- a/integrations/notion/package.json
+++ b/integrations/notion/package.json
@@ -2,7 +2,8 @@
   "name": "@botpresshub/notion",
   "scripts": {
     "check:type": "tsc --noEmit",
-    "build": "pnpm bp build"
+    "build": "pnpm bp build",
+    "add:interfaces": "echo 'no interfaces to add'"
   },
   "keywords": [],
   "private": true,
