--- a/integrations/slack/package.json
+++ b/integrations/slack/package.json
@@ -9,7 +9,8 @@
     "check:format": "prettier --check .",
     "fix:format": "prettier --write .",
     "check:lint": "eslint ./ --ext .ts --ext .tsx",
-    "fix:lint": "eslint --fix ./ --ext .ts --ext .tsx"
+    "fix:lint": "eslint --fix ./ --ext .ts --ext .tsx",
+    "add:interfaces": "echo 'no interfaces to add'"
   },
   "keywords": [],
   "author": "",
