--- a/integrations/stripe/package.json
+++ b/integrations/stripe/package.json
@@ -4,7 +4,8 @@
     "start": "pnpm bp serve",
     "build": "pnpm bp build",
     "deploy": "pnpm bp deploy",
-    "check:type": "tsc --noEmit"
+    "check:type": "tsc --noEmit",
+    "add:interfaces": "echo 'no interfaces to add'"
   },
   "keywords": [],
   "private": true,
