--- a/integrations/telegram/package.json
+++ b/integrations/telegram/package.json
@@ -7,7 +7,8 @@
     "build": "pnpm bp build",
     "deploy": "pnpm bp deploy",
     "login": "pnpm bp login",
-    "check:type": "tsc --noEmit"
+    "check:type": "tsc --noEmit",
+    "add:interfaces": "bp add ../../interfaces/typing-indicator -y"
   },
   "keywords": [],
   "author": "",
