--- a/integrations/todoist/package.json
+++ b/integrations/todoist/package.json
@@ -5,7 +5,8 @@
     "build": "pnpm bp build",
     "deploy": "pnpm bp deploy",
     "login": "pnpm bp login",
-    "check:type": "tsc --noEmit"
+    "check:type": "tsc --noEmit",
+    "add:interfaces": "bp add ../../interfaces/creatable -y"
   },
   "private": true,
   "dependencies": {
