--- a/integrations/trello/package.json
+++ b/integrations/trello/package.json
@@ -8,7 +8,8 @@
     "check:format": "prettier --check .",
     "fix:format": "prettier --write .",
     "check:lint": "eslint ./ --ext .ts --ext .tsx",
-    "fix:lint": "eslint --fix ./ --ext .ts --ext .tsx"
+    "fix:lint": "eslint --fix ./ --ext .ts --ext .tsx",
+    "add:interfaces": "echo 'no interfaces to add'"
   },
   "private": true,
   "dependencies": {
