--- a/integrations/webhook/package.json
+++ b/integrations/webhook/package.json
@@ -7,7 +7,8 @@
     "build": "pnpm bp build",
     "deploy": "pnpm bp deploy",
     "login": "pnpm bp login",
-    "check:type": "tsc --noEmit"
+    "check:type": "tsc --noEmit",
+    "add:interfaces": "echo 'no interfaces to add'"
   },
   "keywords": [],
   "author": "",
