--- a/integrations/zapier/package.json
+++ b/integrations/zapier/package.json
@@ -8,7 +8,8 @@
     "login": "pnpm bp login",
     "deploy": "pnpm bp deploy",
     "check:type": "tsc --noEmit",
-    "test": "jest"
+    "test": "jest",
+    "add:interfaces": "echo 'no interfaces to add'"
   },
   "keywords": [],
   "author": "",
