--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -40,6 +40,7 @@
     "chokidar": "^3.5.3",
     "dotenv": "^16.4.4",
     "esbuild": "^0.15.18",
+    "handlebars": "^4.7.8",
     "json-schema-to-typescript": "^11.0.2",
     "latest-version": "5.1.0",
     "lodash": "^4.17.21",
