--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -15,15 +15,13 @@
   "license": "MIT",
   "dependencies": {
     "@botpress/client": "0.33.0",
-    "@bpinternal/zui": "0.12.0",
-    "handlebars": "^4.7.8"
+    "@bpinternal/zui": "0.12.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.17",
     "esbuild": "^0.16.10",
     "ts-node": "^10.9.1",
     "tsup": "^8.0.2",
-    "type-fest": "^3.4.0",
     "typescript": "^4.9.4"
   }
 }
