chore(integrations/github): refactor the channel wrapper to use createChannelWrapper

--- a/integrations/github/package.json
+++ b/integrations/github/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@botpress/common": "workspace:*",
     "@botpress/sdk": "workspace:*",
     "@botpress/sdk-addons": "workspace:*",
     "@octokit/webhooks-methods": "^3.0.2",
