--- a/integrations/instagram/package.json
+++ b/integrations/instagram/package.json
@@ -16,15 +16,17 @@
     "@botpress/client": "workspace:*",
     "@botpress/sdk": "workspace:*",
     "@botpress/sdk-addons": "workspace:*",
+    "axios": "^1.6.2",
     "messaging-api-messenger": "^1.1.0",
-    "query-string": "^6.14.1",
     "preact": "^10.23.1",
     "preact-render-to-string": "^6.5.7",
-    "axios": "^1.6.2"
+    "qs": "^6.11.0",
+    "query-string": "^6.14.1"
   },
   "devDependencies": {
     "@sentry/cli": "^2.18.1",
     "@types/node": "^18.11.17",
+    "@types/qs": "^6.9.7",
     "esbuild": "^0.15.18",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
