--- a/.github/workflows/check-integration-versions.yml
+++ b/.github/workflows/check-integration-versions.yml
@@ -26,13 +26,19 @@ jobs:
         run: |
           modified_integrations=$(echo -e "${{ steps.changed-files.outputs.all_changed_files }}" | awk -F'/' '{print $2}' | sort -u)
 
+          should_fail=0
+
           for integration in $modified_integrations; do
             echo "Checking $integration"
             exists=$(./.github/scripts/integration-exists.sh $integration)
 
             if [ $exists -ne 0 ]; then
               echo "Integration $integration is already deployed publicly with the same version. Please update the version of your integration."
-              exit 1
+              should_fail=1
             fi
-
           done
+
+          if [ $should_fail -ne 0 ]; then
+            echo "Please update the version of your integration before pushing your changes."
+            exit 1
+          fi
