--- a/bots/sheetzy/package.json
+++ b/bots/sheetzy/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@bp-bots/sheetzy",
   "scripts": {
+    "postinstall": "genenv -o ./.genenv/index.ts -e TELEGRAM_BOT_TOKEN -e GSHEETS_CLIENT_EMAIL -e GSHEETS_PRIVATE_KEY -e GSHEETS_SPREADSHEET_ID",
     "check:type": "tsc --noEmit",
     "build": "bp build",
     "add:integrations": "bp add ../../integrations/gsheets -y && bp add ../../integrations/telegram -y"
@@ -14,7 +15,7 @@
     "@botpress/sdk": "workspace:*"
   },
   "devDependencies": {
-    "@bpinternal/es-node": "^0.0.5",
+    "@bpinternal/genenv": "0.0.1",
     "@types/node": "^18.11.17",
     "execa": "^8.0.1",
     "typescript": "^4.9.4"
