--- a/bots/bugbuster/package.json
+++ b/bots/bugbuster/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bp-bots/bugbuster",
   "scripts": {
-    "postinstall": "genenv -o ./.genenv/index.ts -e GITHUB_TOKEN -e GITHUB_WEBHOOK_SECRET",
+    "postinstall": "genenv -o ./.genenv/index.ts -e BUGBUSTER_GITHUB_TOKEN -e BUGBUSTER_GITHUB_WEBHOOK_SECRET -e BUGBUSTER_SLACK_BOT_TOKEN -e BUGBUSTER_SLACK_SIGNING_SECRET",
     "check:type": "tsc --noEmit",
     "build": "bp build",
     "add:integrations": "bp add ../../integrations/github -y && bp add ../../integrations/slack -y"
