--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -17,6 +17,7 @@ runs:
       with:
         node-version: '18.x'
         check-latest: true
+        cache: 'pnpm'
     - name: Install dependencies
       shell: bash
       run: pnpm i --frozen-lockfile
