--- a/.github/workflows/run-client-tests.yml
+++ b/.github/workflows/run-client-tests.yml
@@ -13,9 +13,9 @@ jobs:
     env:
       NODE_OPTIONS: '--max_old_space_size=8192'
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Setup
-        uses: ./.github/actions/setup
+        uses: ./.github/actions/setup-and-build
         with:
           filter: '@botpress/client'
       - run: |
