--- a/.github/workflows/run-checks.yml
+++ b/.github/workflows/run-checks.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Setup
-        uses: ./.github/actions/setup
+        uses: ./.github/actions/setup-and-build
       - name: Cache entire workspace
         uses: actions/cache/save@v4
         with:
@@ -35,17 +35,6 @@ jobs:
         check: [format, lint, type, dep]
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 8.6.2
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '18.x'
-          check-latest: true
-          cache: 'pnpm'
-      - name: Install dependencies
-        shell: bash
-        run: pnpm i --frozen-lockfile
       - name: Restore workspace
         uses: actions/cache/restore@v4
         with:
@@ -55,6 +44,8 @@ jobs:
             **/bp_modules
             **/gen
           key: ${{ github.sha }}-workspace-${{ github.run_number }}
+      - name: Setup
+        uses: ./.github/actions/setup
       - run: pnpm run check:${{ matrix.check }}
 
   run-tests:
@@ -62,17 +53,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 8.6.2
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '18.x'
-          check-latest: true
-          cache: 'pnpm'
-      - name: Install dependencies
-        shell: bash
-        run: pnpm i --frozen-lockfile
       - name: Restore workspace
         uses: actions/cache/restore@v4
         with:
@@ -82,6 +62,8 @@ jobs:
             **/bp_modules
             **/gen
           key: ${{ github.sha }}-workspace-${{ github.run_number }}
+      - name: Setup
+        uses: ./.github/actions/setup
       - run: pnpm run test
 
   all-checks:
