--- a/integrations/github/package.json
+++ b/integrations/github/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@botpress/common": "workspace:*",
     "@botpress/sdk": "workspace:*",
     "@botpress/sdk-addons": "workspace:*",
     "@octokit/webhooks-methods": "^3.0.2",
@@ -23,7 +24,7 @@
     "@botpress/cli": "workspace:*",
     "@botpress/client": "workspace:*",
     "@sentry/cli": "^2.18.1",
-    "@types/node": "^18.11.17",
+    "@types/node": "^18.19.10",
     "typescript": "^4.9.4"
   }
 }
